fix main menu license text visibility

--- a/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
+++ b/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
@@ -61,7 +61,7 @@
         height: 100%
       .inner-wrapper
         position: relative
-        height: 100%
+        height: calc(100% - 120px)
         overflow-x: hidden
         overflow-y: hidden
         &:hover
